crates/cuda-macros/tests/compile_fail/kernel_launch_context_duplicate.rs
// SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

use cuda_device::kernel;

#[kernel(launch_context = first, launch_context = second)]
pub fn duplicate() {}

fn main() {}
